frontend/tests/errors/ER-030/fixed_unary_bitwise_not_signed_zero_frac/test.vx
!!a:#i8.0;

&^main() -> #i32 {
  (~a) ? 1 : 0
}
